# tauri-deno-example

./: LICENCE  README.md  index.html  package.json  pnpm-lock.yaml  test_scripts.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/deno/: bootstrap.js  mod.rs  module_loader.rs
